tests/paczka1/small_fuzzy/38928174.err
Error in line 1: nia A393 16,3
Error in line 9: S389 S807 47,9
